# cpp-template

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: clang-format-check.yml  test-coverage.yml
include/: remove_me.h
src/: CMakeLists.txt
tests/: CMakeLists.txt
